# ai-engineering-from-scratch

./: .gitignore  LEARNING-PROTOCOL.md  README.md  pyproject.toml
phases/00-setup-and-tooling/01-dev-environment/: notes.md  verify.py
phases/00-setup-and-tooling/04-apis-and-keys/: first_api_call.py  notes.md
phases/01-math-foundations/01-linear-algebra-intuition/: linear_algebra.py  notes.md
phases/01-math-foundations/02-vectors-matrices-operations/: linear_algebra.py  matrices.py  notes.md
phases/01-math-foundations/03-matrix-transformations/: notes.md  transformations.py
phases/01-math-foundations/04-calculus-for-ml/: derivatives.py  notes.md
phases/01-math-foundations/05-chain-rule-and-autodiff/: autodiff.py  notes.md
phases/01-math-foundations/06-probability-and-distributions/: notes.md  probability.py
phases/01-math-foundations/08-optimization/: notes.md  optimizers.py
phases/02-ml-fundamentals/01-what-is-machine-learning/: nearest_centroid.py  notes.md
